Created a Basic Structure on html Page

--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Suraj Jha | Personal Website</title>
 </head>
+
 <body>
-    <p>This Site is currently under Development, kindly visit later</p>
+    <header>
+        <h1>Suraj Jha</h1>
+    </header>
+    <main>
+        <p>Welcome to my personal Website</p>
+        <p>This Site is currently under Development, kindly visit later</p>
+    </main>
+    <footer>
+        <p>Thank You</p>
+    </footer>
 </body>
+
 </html>
