assigned ID to elements

--- a/index.htm
+++ b/index.htm
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <header>
+    <header id="body-header">
         <h1>Suraj Jha</h1>
     </header>
-    <main>
+    <main id="main">
         <p>Welcome to my personal Website</p>
         <p>This Site is currently under Development, kindly visit later</p>
     </main>
-    <footer>
+    <footer id="body-footer">
         <p>Thank You</p>
     </footer>
 </body>
