Created variables in CSS

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -20,6 +20,7 @@
     <footer id="body-footer">
         <p>Thank You</p>
     </footer>
+    <script src="./script/main.js"></script>
 </body>
 
 </html>
