modification and new file addition

--- a/index.htm
+++ b/index.htm
@@ -5,22 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Suraj Jha | Personal Website</title>
+    <title>Suraj Jha | Home | Personal Website</title>
     <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/default.css">
 </head>
 
 <body>
     <header id="body-header">
         <h1>Suraj Jha</h1>
     </header>
-    <main id="main">
+    <nav id="side-nav-bar">
+        <a href="#">Home</a>
+        <a href="./about/index.htm">About</a>
+        <a href="./contact/index.htm">Contact</a>
+    </nav>
+    <section id="welcome-section">
         <p>Welcome to my personal Website</p>
+    </section>
+    <main id="main">
         <p>This Site is currently under Development, kindly visit later</p>
     </main>
     <footer id="body-footer">
         <p>Thank You</p>
     </footer>
     <script src="./script/main.js"></script>
+    <script src="./script/default.js"></script>
 </body>
 
 </html>
