style errors fixed

--- a/index.htm
+++ b/index.htm
@@ -51,10 +51,11 @@
         </div>
     </nav>
     <section id="welcome-section">
-        <p style="text-align: center;">Welcome to my personal Website</p>
+        <p style="text-align: center; padding: 0 1em; color: gray;">Welcome to my personal Website</p>
     </section>
     <main id="main">
-        <p style="text-align: center;">This Site is currently under Development, till then you can explore some of my projects</p>
+        <p style="text-align: center; padding: 0 1em; color: gray;">This Site is currently under Development, till then you can explore some of my projects</p>
+        <hr>
         <section>
             <h4 style="text-align: center;">MY PROJECTS</h4>
             <div class="projects-container">
@@ -128,7 +129,8 @@
         </section>
     </main>
     <footer id="body-footer">
-        <p style="text-align: center;">Thank You</p>
+        <hr>
+        <p style="text-align: center; margin: 0; padding: 1em; color: gray;">This Site is currently under Development, till then you can explore some of my projects</p>
     </footer>
     <script src="./scripts/default.js"></script>
     <script src="./scripts/main.js"></script>
