added pading svg icon and enabled image switching

--- a/index.htm
+++ b/index.htm
@@ -59,9 +59,9 @@
         <section>
             <h4 style="text-align: center;">MY PROJECTS</h4>
             <div class="projects-container">
-                <section class="card" style="padding-top: 1em;">
+                <section class="card">
                     <div class="card-gallery" data-displaying_image="0">
-                        <img src="./images/les/icon.svg" alt="icon" class="card-image" style="z-index: auto; object-fit: contain;">
+                        <img src="./images/les/les-icon-with-upperpadding.svg" alt="icon" class="card-image" style="z-index: auto; object-fit: contain;">
                         <!-- <img src="./images/passGen/daymode1.png" alt="card1 img5" class="card-image" style="z-index: -1; object-position: top;">
                         <img src="./images/passGen/daymode2.jpg" alt="card1 img4" class="card-image" style="z-index: -1; object-position: top;">
                         <img src="./images/passGen/nightmode1.png" alt="card1 img3" class="card-image" style="z-index: -1; object-position: top;">
@@ -92,16 +92,16 @@
                         </div>
                     </div>
                 </section>
-                <section class="card" style="padding-top: 1em;">
+                <section class="card">
                     <div class="card-gallery" data-displaying_image="0">
-                        <img src="./images/passGen/icon.svg" alt="icon" class="card-image" style="z-index: auto; object-fit: contain;">
-                        <!-- <img src="./images/passGen/daymode1.png" alt="Day mode img1" class="card-image" style="z-index: -1; object-position: top;">
-                        <img src="./images/passGen/daymode2.jpg" alt="card1 img4" class="card-image" style="z-index: -1; object-position: top;">
-                        <img src="./images/passGen/nightmode1.png" alt="card1 img3" class="card-image" style="z-index: -1; object-position: top;">
-                        <img src="./images/passGen/nightmode2.jpg" alt="card1 img1" class="card-image" style="z-index: -1; object-position: top;"> -->
+                        <img src="./images/passGen/passGen-with-upperpadding.svg" alt="icon" class="card-image" style="z-index: auto; object-fit: contain;">
+                        <img src="./images/passGen/daymode1.png" alt="Day mode img1" class="card-image" style="z-index: -1; object-position: 50% 10%;">
+                        <img src="./images/passGen/nightmode1.png" alt="card1 img3" class="card-image" style="z-index: -1; object-position: 50% 10%;">
+                        <img src="./images/passGen/daymode2.jpg" alt="card1 img4" class="card-image" style="z-index: -1; object-position: 50% 10%;">
+                        <img src="./images/passGen/nightmode2.jpg" alt="card1 img1" class="card-image" style="z-index: -1; object-position: 50% 35%;">
                     </div>
-                    <button class="previous-card-image-button" style="visibility: hidden; display: none;"><svg viewBox="0 0 24 24" class="icon-svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" /></svg></button>
-                    <button style="display: none;" class="next-card-image-button"><svg viewBox="0 0 24 24" class="icon-svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" /></svg></button>
+                    <button class="previous-card-image-button" style="visibility: hidden;"><svg viewBox="0 0 24 24" class="icon-svg"><path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" /></svg></button>
+                    <button class="next-card-image-button"><svg viewBox="0 0 24 24" class="icon-svg"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" /></svg></button>
                     <div class="card-image-navigator" style="display: none;">
                         <button class="card-image-navigator-btn" data-pointing-card-image="1">1</button>
                         <button class="card-image-navigator-btn" data-pointing-card-image="1">2</button>
@@ -136,7 +136,7 @@
     <script src="./scripts/main.js"></script>
     <script src="./scripts/sideNavBar.js"></script>
     <script src="./scripts/ripple.js"></script>
-    <!-- <script src="./scripts/card.js"></script> -->
+    <script src="./scripts/card.js"></script>
 </body>
 
 </html>
