--- a/index.htm
+++ b/index.htm
@@ -44,6 +44,7 @@
                 rel="noopener noreferrer">Github</a>
             <a href="https://www.instagram.com/jhasuraj_/" class="nav-items" target="_blank"
                 rel="noopener noreferrer">Instagram</a>
+            <a href="mailto:contact@jhasuraj.com" class="nav-items">Email</a>
         </div>
         <div class="nav-types">
             <p>&copy; Suraj Jha 2019-2020</p>
