--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Suraj Jha | Home | Personal Website</title>
+    <title>Suraj Jha | Personal Website</title>
     <link rel="stylesheet" href="./stylesheets/default.css">
     <link rel="stylesheet" href="./stylesheets/main.css">
     <link rel="stylesheet" href="./stylesheets/header.css">
