--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155092766-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155092766-1');
+    </script>
     <!-- Prevent Search engine to index my website -->
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
