--- a/index.htm
+++ b/index.htm
@@ -53,10 +53,10 @@
             <a href="./contact/" class="nav-items" target="_blank" title="Click here to know about the App">Contact</a>
         </div>
         <div class="nav-types">
-            <a href="https://github.com/the-suraj/" class="nav-items" target="_blank"
-                rel="noopener noreferrer">Github</a>
-            <a href="https://www.instagram.com/jhasuraj_/" class="nav-items" target="_blank"
-                rel="noopener noreferrer">Instagram</a>
+            <a href="https://github.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Github</a>
+            <a href="https://facebook.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Facebook</a>
+            <a href="https://instagram.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Instagram</a>
+            <a href="https://twitter.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Twitter</a>
             <a href="mailto:contact@jhasuraj.com" class="nav-items">Email</a>
         </div>
         <div class="nav-types">
