added link to anorcle Github page

--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
             <a href="./contact/" class="nav-items" target="_blank" title="Click here to know about the App">Contact</a>
         </div>
         <div class="nav-types">
-            <a href="https://github.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Github</a>
+            <a href="https://github.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">GitHub</a>
             <a href="https://facebook.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Facebook</a>
             <a href="https://instagram.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://twitter.jhasuraj.com" class="nav-items" target="_blank" rel="noopener noreferrer">Twitter</a>
             <a href="mailto:contact@jhasuraj.com" class="nav-items">Email</a>
+        </div>
+        <div class="nav-types">
+            <a href="https://github.com/anorcle" class="nav-items" target="_blank" rel="noopener noreferrer">Anorcle ❤️ startup</a>
         </div>
         <div class="nav-types">
             <p>&copy; Suraj Jha 2019-2020</p>
