--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Suraj Jha | Personal Website</title>
+    <meta name="keywords" content="suraj,jha,official,india,maharashtra,developer,designer">
+    <meta name="description" content="This is Suraj's Official Website. You can explore and use Suraj's projects, find him on various social medias, contact him and give him a direct feedback.">
+    <meta property="og:site_name" content="Suraj's Portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jhasuraj.com/">
+    <meta property="og:image" content="https://jhasuraj.com/profile.jpg">
+    <meta property="og:title" content="Suraj Jha - Developer and Designer | Official Website">
+    <meta property="og:description" content="This is Suraj's Official Website. You can explore and use Suraj's projects, find him on various social medias, contact him and give him a direct feedback.">
     <link rel="stylesheet" href="./css/index.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
