changed folder name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         </div>
         <div class="main">
             <div class="navbar">
-                <a href="./projects/">Projects</a>
+                <a href="./apps/">apps</a>
+                <a href="./music/">music</a>
             </div>
             <div class="main-body">
                 <div class="text-container">
