--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         </div>
         <div class="main">
             <div class="navbar">
-                <a href="./apps/">apps</a>
-                <a href="./music/">music</a>
+                <a href="https://join.anorcle.co" target="_blank">Anorcle</a>
+                <a href="./ai/">AI</a>
+                <a href="./apps/">Apps</a>
+                <a href="./music/">Music</a>
             </div>
             <div class="main-body">
                 <div class="text-container">
