--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://twitter.jhasuraj.com" target="_blank"><img src="./icons/tabler_brand-twitter.svg" alt="Twitter"></a>
             <a href="https://github.jhasuraj.com" target="_blank"><img src="./icons/tabler_brand-github.svg" alt="Github"></a>
             <a href="https://facebook.jhasuraj.com" target="_blank"><img src="./icons/tabler_brand-facebook.svg" alt="Facebook"></a>
-            <!--<a href="https://instagram.jhasuraj.com" target="_blank"><img src="./icons/tabler_brand-instagram.svg" alt="Instagram"></a>-->
+            <a href="https://instagram.jhasuraj.com" target="_blank"><img src="./icons/tabler_brand-instagram.svg" alt="Instagram"></a>
         </div>
         <div class="main">
             <div class="navbar">
