--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="main">
             <div class="navbar">
-                <a href="https://join.anorcle.co" target="_blank">Anorcle</a>
+                <a href="https://www.anorcle.com" target="_blank">Anorcle</a>
                 <a href="./ai/">AI</a>
                 <a href="./apps/">Apps</a>
                 <a href="./music/">Music</a>
